@@ -40,6 +40,10 @@ New Features
  3. SOLR-257: WordDelimiterFilter has a new parameter splitOnCaseChange,
     which can be set to 0 to disable splitting "PowerShot" => "Power" "Shot".
     (klaas)
+    
+ 3. SOLR-193: Adding SolrDocument and SolrInputDocument to represent documents
+    outside of the lucene Document infrastructure.  This class will be used 
+    by clients and for processing documents. (ryan) 
 
 Changes in runtime behavior
 
